# squirrel

./: .gitignore  CMakeLists.txt  README.md
innosetup/: apitool.iss
src/: HttpWin.cpp  HttpWin.h  main.cpp
